# deers

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  autoreasearch.md  results.tsv
.cargo/: config.toml
dev/: backlog.md  nanochat-training-plan.md
examples/: bench_compare.rs  bench_gpt.rs  mnist_train.rs  tinystories_train.rs
logs/security/: .security-key
src/: backprop.rs  checkpoint.rs  dataset.rs  device.rs  dtype.rs  error.rs  layout.rs  lib.rs  loss.rs  nn.rs  ops.rs  optim.rs  profiler.rs  storage.rs  tensor.rs  test_utils.rs  tests.rs  tokenizer.rs  var.rs
src/models/: gpt.rs  mnist.rs  mod.rs
src/nn/: functional.rs  parameter.rs
src/storage/: cpu.rs  cuda.rs  kernels.metal  mps.rs
tests/: candle_validation.rs  gpt.rs  nn.rs  tensor.rs  utils.rs
