[package]
name = "deers"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.9"
rand = "0.8"
gemm = "0.19"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.33"

[dev-dependencies]
candle-core = { version = "0.8", features = ["metal"] }
candle-nn = { version = "0.8", features = ["metal"] }
