[package]
name = "deers"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.18"
rand = "0.10"
gemm = "0.19.0"
half = "2.7.1"
tiktoken-rs = "0.9"
ureq = "3"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
safetensors = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.33.0"

[dev-dependencies]
candle-core = { version = "0.9.2", features = ["metal"] }
candle-nn = { version = "0.9.2", features = ["metal"] }

[profile.release]
debug = true

[lints.clippy]
all = { level = "warn", priority = -1 }
too_many_arguments = "allow"
enum_variant_names = "allow"
needless_borrow = "allow"
manual_div_ceil = "allow"
unnecessary_cast = "allow"
