[package]
name = "deers"
version = "0.1.0"
edition = "2024"
description = "A minimal deep learning framework in Rust, built for understanding"
license = "MIT"
repository = "https://github.com/vitillo/deers"
authors = ["Roberto Vitillo <ra.vitillo@gmail.com>"]

[features]
default = []
cuda = ["dep:cudarc"]

[dependencies]
thiserror = "2.0.18"
rand = "0.10"
gemm = "0.19.0"
half = "2.7.1"
tiktoken-rs = "0.9"
ureq = "3"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
safetensors = "0.7"

[target.'cfg(target_os = "linux")'.dependencies]
cudarc = { version = "0.19.0", optional = true, default-features = false, features = ["std", "cublas", "curand", "driver", "nvrtc", "f16", "cuda-version-from-build-system", "dynamic-linking"] }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.33.0"

[target.'cfg(target_os = "macos")'.dev-dependencies]
candle-core = { version = "0.9.2", features = ["metal"] }
candle-nn = { version = "0.9.2", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dev-dependencies]
candle-core = { version = "0.9.2", features = ["cuda"] }
candle-nn = { version = "0.9.2", features = ["cuda"] }

[profile.release]
debug = true

[lints.clippy]
all = { level = "warn", priority = -1 }
too_many_arguments = "allow"
enum_variant_names = "allow"
needless_borrow = "allow"
manual_div_ceil = "allow"
unnecessary_cast = "allow"
